clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00104.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00104.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = alloca s64i, "l", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 0 : s32i
        store %4, %1, align 4
        %5 = const 0 : s64i
        store %5, %2, align 8
        %6 = load %1 : s32i, align 4
        not
        store %7, %1, align 4
        scope {
                %18 = load %1 : s32i, align 4
                %19 = cast(integral) %18 : u32i
                %20 = const 4294967295 : u32i
                cmp
                if %21 {
                        %22 = const 1 : s32i
                        store %22, %0
                        %23 = load %0 : s32i
                        return %23
                }
                yield
        }
        %8 = load %2 : s64i, align 8
        not
        store %9, %2, align 8
        scope {
                %12 = load %1 : s32i, align 4
                %13 = cast(integral) %12 : u64i
                %14 = const 18446744073709551615 : u64i
                cmp
                if %15 {
                        %16 = const 2 : s32i
                        store %16, %0
                        %17 = load %0 : s32i
                        return %17
                }
                yield
        }
        %10 = const 0 : s32i
        store %10, %0
        %11 = load %0 : s32i
        return %11
}
